feat: login, logout and access token refresh endpoints done. TODO: password reset and password change
